# bookFM

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
src/bookfm/: __init__.py  analysis.py  api.py  api_models.py  api_services.py  chunking.py  cli.py  config.py  db.py  ingest.py  lyria_session.py  models.py  music.py  pipeline.py  semantic_chunking.py  timing.py
tests/: test_api.py  test_core.py
ui/: app.js  index.html  room.html  site.webmanifest  sticky-header-gsap.html  styles.css
